--- a/css/styles.css
+++ b/css/styles.css
@@ -194,3 +194,16 @@ footer a {
     text-decoration: none;
     /* Remove underline */
 }
+
+.highlight {
+    border: 2px solid #004080;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    padding: 0.5rem 1rem;
+    margin: 1rem 0;
+    /* Add vertical spacing between elements */
+}
+
+.highlight h2 {
+    color: #004080;
+}
