--- a/css/styles.css
+++ b/css/styles.css
@@ -252,3 +252,14 @@ iframe {
     width: 100%;
     border: none;
 }
+
+.note {
+    color: red;
+    font-weight: bold;
+    margin: 10px 0;
+}
+
+.calendar {
+    pointer-events: none;
+    opacity: 0.5;
+}
